[package]
name = "z80"
authors = ["Kirjava"]
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "z80 emulator"
readme = "README.md"
documentation = "https://docs.rs/z80"
repository = "https://github.com/kirjavascript/z80"
exclude = [
    "roms/*"
]

[lib]
name = "z80"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]

[profile.test]
opt-level = 3

[workspace]
members = [
]
